# imdb_250_movies

./: main.py  pyproject.toml
helpers/: logger.py  movies.txt
src/: sel.py
